# billiards-mipt

./: .gitignore  Architecture.puml  CMakeLists.txt  README.md
Billiards/: Ball.cpp  Ball.h  Border.cpp  Border.h  CMakeLists.txt  Game.cpp  Game.h  Interface.cpp  Interface.h  Table.cpp  Table.h  game.cpp  game.h  globals.cpp  globals.h  interface.cpp  interface.h  main.cpp  main_graphic.cpp  maths.cpp  maths.h  objects.cpp  objects.h  physics.cpp  physics.h
